--- a/profile-edit.html
+++ b/profile-edit.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Профіль</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755077365791"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755077365791">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755078098999"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755078098999">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -599,6 +599,7 @@
 										Особистий кабінет
 										<div class="plus-icon"></div>
 									</summary>
+									<!-- {"href": "profile-addresses.html", "ancor": "Aдресна книга", "icon": "location"}, {"href": "profile-wait.html", "ancor": "товари, які я очікую", "icon": "wait"}, -->
 									<div class="profile__menu">
 										<a href="profile-edit.html" class="profile__menu-item --active">
 											<div class="profile__menu-icon">
@@ -616,14 +617,6 @@
 											</div>
 											<span>Змінити пароль</span>
 										</a>
-										<a href="profile-addresses.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#location"></use>
-												</svg>
-											</div>
-											<span>Aдресна книга</span>
-										</a>
 										<a href="profile-wishlist.html" class="profile__menu-item">
 											<div class="profile__menu-icon">
 												<svg>
@@ -639,14 +632,6 @@
 												</svg>
 											</div>
 											<span>розсилка новин</span>
-										</a>
-										<a href="profile-wait.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#wait"></use>
-												</svg>
-											</div>
-											<span>товари, які я очікую</span>
 										</a>
 										<a href="profile-history.html" class="profile__menu-item">
 											<div class="profile__menu-icon">
