--- a/checkout.html
+++ b/checkout.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Оформлення замовлення</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755078662646"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755078662646">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755111718515"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755111718515">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -574,6 +574,16 @@
 								<button data-fls-popup-close="" class="checkout-popup__button button button--black-border">ЗАКРИТИ</button>
 								<a href="#" class="checkout-popup__button button">До Особистого кабінету</a>
 							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div data-fls-popup="sizes-popup" aria-hidden="true" class="popup popup--sizes">
+				<div data-fls-popup-wrapper="" class="popup__wrapper">
+					<div data-fls-popup-body="" class="popup__body">
+						<button data-fls-popup-close="" type="button" class="popup__close _icon-cross"></button>
+						<div class="sizes-popup">
+							<img alt="Image" class="sizes-popup__image" src="./assets/img/sizes.webp">
 						</div>
 					</div>
 				</div>
