--- a/popups.html
+++ b/popups.html
@@ -6,8 +6,8 @@
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
 		<title>Попапи</title>
-		<script type="module" crossorigin="" src="./js/app.min.js?v=1755078662646"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755078662646">
+		<script type="module" crossorigin="" src="./js/app.min.js?v=1755111718515"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755111718515">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -578,6 +578,16 @@
 					</div>
 				</div>
 			</div>
+			<div data-fls-popup="sizes-popup" aria-hidden="true" class="popup popup--sizes">
+				<div data-fls-popup-wrapper="" class="popup__wrapper">
+					<div data-fls-popup-body="" class="popup__body">
+						<button data-fls-popup-close="" type="button" class="popup__close _icon-cross"></button>
+						<div class="sizes-popup">
+							<img alt="Image" class="sizes-popup__image" src="./assets/img/sizes.webp">
+						</div>
+					</div>
+				</div>
+			</div>
 			<main class="page">
 				<div class="page__popups popups">
 					<div class="popups__container">
@@ -585,6 +595,7 @@
 						<button data-fls-popup-link="checkout-popup" class="button">Checkout</button>
 						<button data-fls-popup-link="login-popup" class="button">Login</button>
 						<button data-fls-popup-link="reg-popup" class="button">Register</button>
+						<button data-fls-popup-link="sizes-popup" class="button">Sizes</button>
 					</div>
 				</div>
 			</main>
